remove float:left to fix overlap

--- a/src/main/cq/jcr_root/apps/carty/clientlibs/carty/css/tree.less
+++ b/src/main/cq/jcr_root/apps/carty/clientlibs/carty/css/tree.less
@@ -47,7 +47,6 @@
 		.short.mapping-name {
 			display: block;
 			width: 10em;
-			float: left;
 		}
 
 		input {
